--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AppStore Studio v2.1</title>
+    <title>EasyScreen Studio v2.1</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- React & ReactDOM -->
@@ -383,7 +383,7 @@
                 <div className="w-full md:w-96 bg-white border-r border-gray-200 flex flex-col h-full overflow-y-auto shadow-xl z-10">
                     <div className="p-6 border-b border-gray-100">
                     <h1 className="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-indigo-600 to-purple-600">
-                        AppStore Studio
+                        EasyScreen Studio
                     </h1>
                     <p className="text-sm text-gray-500 mt-1">v2.1 • Mac & Chrome Support</p>
                     </div>
